<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.itextpdf</groupId>
    <artifactId>root</artifactId>
    <version>9.3.0-SNAPSHOT</version>
    <relativePath />
  </parent>

  <artifactId>pdfocr-root</artifactId>
  <version>4.0.3-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>pdfOCR</name>
  <description>pdfOCR is an iText add-on for Java to recognize and extract text in scanned documents and images. It can also convert them into fully ISO-compliant PDF or PDF/A-3u files that are accessible, searchable, and suitable for archiving</description>

  <modules>
    <module>pdfocr-api</module>
    <module>pdfocr-tesseract4</module>
    <module>pdfocr-onnxtr</module>
  </modules>

  <properties>
    <itext.version>9.3.0-SNAPSHOT</itext.version>
    <java.version>1.8</java.version>
    <jdkLevel>${java.version}</jdkLevel>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <skipTests>false</skipTests>
    <sharpen.builddotnet>false</sharpen.builddotnet>
    <sharpen.showdiff>false</sharpen.showdiff>
  </properties>

  <repositories>
    <repository>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>itext-snapshot</id>
      <name>iText Repository - snapshots</name>
      <url>https://repo.itextsupport.com/snapshot</url>
    </repository>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>itext-releases</id>
      <name>iText Repository - releases</name>
      <url>https://repo.itextsupport.com/releases</url>
    </repository>
  </repositories>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*.ttf</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${failsafe.version}</version>
        <configuration>
          <skipTests>${skipTests}</skipTests>
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
          <useSystemClassLoader>false</useSystemClassLoader>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <doclint>none</doclint>
          <groups>
            <group>
              <title>Ocr</title>
              <packages>com.itextpdf.ocr*</packages>
            </group>
          </groups>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <skipTests>${skipTests}</skipTests>
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
          <useSystemClassLoader>false</useSystemClassLoader>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.pitest</groupId>
        <artifactId>pitest-maven</artifactId>
        <version>1.1.11</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>qa</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.owasp</groupId>
            <artifactId>dependency-check-maven</artifactId>
            <version>${dependencyCheck.version}</version>
            <configuration>
              <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>